Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="sphere"></div>
         <div class="pyramid"></div>
     </div>
-
+<meta name="yandex-verification" content="0a7970440f6452c4" />
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
@@ -451,4 +451,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
